# Forecasting-Company-Fundamentals

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
forecasting_cfs/: chronos.py  eval_model.py  local_eval_helper.py  xlstm_mixer.py
notebooks/: .gitignore  combine_for_market_evaluation.ipynb  compare_with_human_eval.ipynb  eval_results.ipynb  run.ipynb
